Made tests better

--- a/test/scss/inheritance.scss
+++ b/test/scss/inheritance.scss
@@ -1,7 +1,10 @@
+@import "cats";
+
 .error {
-  border: 1px #f00;
+  border: #f00;
   background: #fdd;
 }
+
 .error.intrusion {
   font-size: 1.3em;
   font-weight: bold;
