Rewrite gulp-sass to be a very light wrapper
Simply pass everything to node-sass and just hand
back the results to gulp.
Removed custom options like success/failure cb
and sync rendering.

Missing:
 -  gulp-sourcemaps support + test

--- a/test/expected/inheritance.css
+++ b/test/expected/inheritance.css
@@ -1,8 +1,11 @@
+body {
+  background: pink; }
+
 .error, .badError {
   border: #f00;
   background: #fdd; }
 
-.error.intrusion {
+.error.intrusion, .intrusion.badError {
   font-size: 1.3em;
   font-weight: bold; }
 
